correção do erro do fundo

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {background-image: url(imagem6.jpg)
+body {background-image: url(imagem6.jpg);
     background-repeat: no-repeat;
     background-size:cover;
 }
