--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {background-image: url(imagem6.jpg);
     background-size:cover;
 }
 
-text-align: left;
+{ text-align: center ;
 }
 
 .part1 { text-align: center;
