não sei o que esta acontecendo

--- a/style.css
+++ b/style.css
@@ -26,11 +26,11 @@ text-align: left;
 
 .part4 {border-color: powderblue;
     border-width: 3px;
-    border-style: outset;
+    border-style: outset;x1.25
     margin-right: 85%;
     text-align: left;
 }
-x1.25
+
 
 .part5 {border-color: powderblue;
     border-width: 3px;
