--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ text-align: left;
 
 .part4 {border-color: powderblue;
     border-width: 3px;
-    border-style: outset;x1.25
+    border-style: outset;
     margin-right: 85%;
     text-align: left;
 }
